--- a/styles.css
+++ b/styles.css
@@ -167,10 +167,16 @@ main{
     .main-story-content{
         flex-direction: column;
     }
-    
+    .page-title{
+        text-align: center;
+    }
+    .bottom-nav-container{
+        justify-content: center;
+    }
 }
 
 @media (max-width: 1580px) {
+    
     .top-nav-container{
         bottom: 10px;
     }
@@ -194,16 +200,22 @@ main{
 }
 
 @media (max-width: 1280px){
+    .site-wrapper{
+        max-width: 75%;
+    }
     .main-story-content img{
         width: 90%;
-        
+    }
+    .page-title{
+        top: -10px;
+    }
+    .top-nav-container{
+        display: none;
     }
 }
 
 @media (max-width: 935px ){
-    .top-nav-container{
-        display: none;
-    }
+
     .page-title{
         top: -10px;
     }
