--- a/styles.css
+++ b/styles.css
@@ -1,123 +1,155 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /*HEADER*/
-.header-content-wrapper{
-    margin: 0 auto;
-    max-width: 50%;
+.header-content-wrapper {
+  margin: 0 auto;
+  max-width: 50%;
 }
-header{
-    position: relative;
-    max-width: 100vw;
-    padding: 30px 30px 20px 30px;
-    
-    box-shadow: 0px 0px 5px 0px;
-    user-select: none;
+header {
+  position: relative;
+  max-width: 100vw;
+  padding: 30px 30px 20px 30px;
+
+  box-shadow: 0px 0px 5px 0px;
+  user-select: none;
 }
-.page-title{
-    color: red;
-    font-size: 3rem;
-    text-align: start;
-    cursor: pointer;
-    position: relative;
-    bottom: 10px;
+.page-title {
+  color: red;
+  font-size: 3rem;
+  text-align: start;
+  cursor: pointer;
+  position: relative;
+  bottom: 10px;
 }
-.top-nav-container{
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
-    bottom: 20px;
+.top-nav-container {
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  bottom: 20px;
 }
-.top-nav-container ul{
-    display: flex;
-    
-    justify-content: center;
-    list-style: none;
+.top-nav-container ul {
+  display: flex;
+
+  justify-content: center;
+  list-style: none;
 }
 
-.top-nav-container ul li{
-    padding: 0 12px 0 12px;
-    border-left: 1px solid gray;
-    font-size: 1rem;
-    cursor: pointer;
-    
+.top-nav-container ul li {
+  padding: 0 12px 0 12px;
+  border-left: 1px solid gray;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
-.bottom-nav-container{
-    display: flex;
-    justify-content: flex-start;
+.bottom-nav-container {
+  display: flex;
+  justify-content: flex-start;
 }
-.bottom-nav-container ul{
-    display: flex;
-    justify-content: center;
-    list-style: none;
+.bottom-nav-container ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
 }
 
-.bottom-nav-container ul li{
-    padding: 0 10px 0 10px;
-    font-size: 0.8rem;
-    cursor: pointer;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+.bottom-nav-container ul li {
+  padding: 0 10px 0 10px;
+  font-size: 0.8rem;
+  cursor: pointer;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
+.top-nav-container ul li a,
+.bottom-nav-container ul li a {
+  text-decoration: none;
+  color: black;
+}
+
 .top-nav-container ul li a:hover,
-.bottom-nav-container ul li a:hover{
-    border-bottom: 1px solid red;
+.bottom-nav-container ul li a:hover {
+  border-bottom: 1px solid red;
 }
 
 /*HEADER*/
 
 /*MAIN CONTENT*/
 
-.site-wrapper{
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    max-width: 50%;
-    gap: 50px;
+.site-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 50%;
+  gap: 50px;
 }
-.main-content-wrapper{
-    
-    padding-top: 50px;
+.main-content-wrapper {
+  position: relative;
+  padding-top: 50px;
 }
-main{
-    max-width: 100vw;
-    padding: 20px;
+main {
+  max-width: 100vw;
+  padding: 20px;
 }
-.main-story-content{
-    display: flex;
-    position: relative;
-    gap: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid red;
+.main-story-content {
+  display: flex;
+  position: relative;
+  gap: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid red;
 }
-.text-story{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    
-    
+.text-story {
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
-.story-title{
-    font-size: 2rem;
-    padding-bottom: 10px;
+.story-title {
+  font-size: 2rem;
+  padding-bottom: 10px;
 }
-.story-info{
-    font-size: 1.2rem;
-    padding-bottom: 20px;
-    opacity: .9;
+.story-info {
+  font-size: 1.2rem;
+  padding-bottom: 20px;
+  opacity: 0.9;
 }
-.story-author{
-    position: absolute;
-    bottom: 0;
-    font-size: .8rem;
-    opacity: .7;
+.author-catagory-info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  bottom: 0;
+  padding-top: 15px;
+}
+.catagory-info {
+  font-style: italic;
+}
+.catagory-info a {
+  text-decoration: none;
+
+  color: red;
+}
+.catagory-info li {
+  padding: 5px 5px 15px 5px;
+}
+.catagory-info li:hover {
+  cursor: pointer;
+}
+.catagory-info li {
+  list-style-type: none;
+  color: red;
 }
 
-.first-story img{
+.story-author {
+  display: flex;
+
+  align-items: center;
+
+  font-size: 0.8rem;
+  opacity: 0.7;
+}
+
+/*.first-story img{
     width: 500px;
     height: 300px;
 }
@@ -125,107 +157,122 @@ main{
     width: 500px;
     height: 300px;
 }
-
-.breaking-story-wrapper{
-    padding-top: 70px;
+*/
+.main-story-content img {
+  width: 100%;
 }
 
+.breaking-story-wrapper {
+  padding-top: 70px;
+}
 
-.breaking-story-headline{
-    padding: 5px 0 5px 0;
-    border-top: 5px double red;
-    border-bottom: 5px double red;
+.breaking-story-headline {
+  padding: 5px 0 5px 0;
+  border-top: 5px double red;
+  border-bottom: 5px double red;
 }
-.breaking-story{
-    display: flex;
-    position: relative;
-    margin: 15px 0;
-    border-bottom: 1px solid red;
+.breaking-story {
+  display: flex;
+  position: relative;
+  margin: 15px 0;
+  padding-bottom: 10px;
+  border-bottom: 1px solid red;
 }
-.breaking-story-title{
-    padding-right: 10px;
+.breaking-text-wrapper,
+.breaking-story-picture {
+  cursor: pointer;
 }
-.breaking-time{
-   
-    
-    opacity: .7;
-    
+.breaking-story-title {
+  padding-right: 10px;
 }
-.breaking-story img{
-    width: 80px;
-    height: 120px;
-    
+.breaking-time {
+  padding-top: 10px;
+  opacity: 0.7;
+}
+.breaking-story img {
+  width: 80px;
+  height: 120px;
 }
 
 /*MAIN CONTENT*/
 
-
-
-
 /*MEDIA*/
-@media (max-width: 2000px){
-    .main-story-content{
-        flex-direction: column;
-    }
-    
+@media (max-width: 2000px) {
+  .main-story-content {
+    flex-direction: column;
+  }
+  .story-info {
+    padding-bottom: 35px;
+  }
+  .catagory-info {
+    position: absolute;
+    bottom: -15px;
+    left: 80%;
+  }
 }
 
 @media (max-width: 1580px) {
-    .top-nav-container{
-        bottom: 10px;
-    }
-    .top-nav-container ul{
-        flex-direction: column;
-    }
-    .page-title{
-        top: 30px;
-    }
-    .main-story-content{
-        align-items: start;
-    }
-    .main-content-wrapper{
-        max-width: 70%;
-    }
-    .breaking-story-wrapper{
-        display: none;
-    }
-    
-    
+  .top-nav-container {
+    bottom: 10px;
+    right: 20px;
+  }
+  .top-nav-container ul {
+    flex-direction: column;
+  }
+
+  .page-title {
+    top: 50px;
+  }
+  .main-story-content {
+    align-items: start;
+  }
+  .main-content-wrapper {
+    max-width: 80%;
+    justify-content: space-between;
+  }
 }
 
-@media (max-width: 1280px){
-    .main-story-content img{
-        width: 90%;
-        
-    }
+@media (max-width: 1300px) {
+  .catagory-info li {
+    list-style: none;
+    color: red;
+  }
 }
 
-@media (max-width: 935px ){
-    .top-nav-container{
-        display: none;
-    }
-    .page-title{
-        top: -10px;
-    }
-    .first-story img{
-        width: 250px;
-        height: 150px;
-    }
-    .site-wrapper{
-        max-width: 80%;
-    }
-    figure{
-        display: none;
-    }
+@media (max-width: 1160px) {
+  .top-nav-container {
+    display: none;
+  }
+  .breaking-story-wrapper {
+    display: none;
+  }
+  .page-title {
+    top: -10px;
+    text-align: center;
+  }
+  .bottom-nav-container {
+    justify-content: center;
+  }
 }
-@media (max-width: 750px){
-    .page-title{
-        text-align: center;
-    }
-    .bottom-nav-container{
-        justify-content: center;
-    }
-    
+
+@media (max-width: 935px) {
+  .site-wrapper {
+    max-width: 80%;
+  }
+  figure {
+    display: none;
+  }
+  .author-catagory-info {
+    top: 10px;
+  }
+}
+@media (max-width: 750px) {
+  .page-title {
+    text-align: center;
+  }
+  .bottom-nav-container {
+    justify-content: center;
+  }
 }
 
 /*MEDIA*/
