--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,8 @@ header {
 }
 .main-content-wrapper {
   position: relative;
-  padding-top: 50px;
+  padding: 50px 10px;
+  border: 1px dotted red;
 }
 main {
   max-width: 100vw;
@@ -103,30 +104,34 @@ main {
 .text-story {
   display: flex;
   flex-direction: column;
-  position: relative;
+  padding: 10px 0;
+  justify-content: space-between;
 }
 .story-title {
   font-size: 2rem;
   padding-bottom: 10px;
+  cursor: pointer;
 }
 .story-info {
   font-size: 1.2rem;
   padding-bottom: 20px;
   opacity: 0.9;
+  cursor: pointer;
 }
 .author-catagory-info {
   position: relative;
   display: flex;
-  flex-direction: column;
-  bottom: 0;
+  justify-content: flex-start;
   padding-top: 15px;
 }
+
 .catagory-info {
   font-style: italic;
 }
 .catagory-info a {
+  padding: 2px;
   text-decoration: none;
-
+  border: 1px solid red;
   color: red;
 }
 .catagory-info li {
@@ -144,7 +149,7 @@ main {
   display: flex;
 
   align-items: center;
-
+  padding-left: 3px;
   font-size: 0.8rem;
   opacity: 0.7;
 }
@@ -213,6 +218,9 @@ main {
   }
   .story-info {
     padding-bottom: 35px;
+  }
+  .author-catagory-info {
+    justify-content: flex-start;
   }
   .catagory-info {
     position: absolute;
