--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,23 @@
   box-sizing: border-box;
 }
 
+.entire-page-wrapper {
+  position: relative;
+}
+
 /*HEADER*/
 .header-content-wrapper {
   margin: 0 auto;
   max-width: 50%;
+  max-height: 150px;
 }
 header {
   position: relative;
   max-width: 100vw;
+
   padding: 30px 30px 20px 30px;
 
-  box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5);
+  box-shadow: 0px 10px 10px rgba(255, 0, 0, 0.5);
   user-select: none;
 }
 .page-title {
@@ -83,6 +89,7 @@ header {
   margin: 0 auto;
   max-width: 50%;
   gap: 50px;
+  padding-bottom: 10rem;
 }
 .main-content-wrapper {
   position: relative;
@@ -205,6 +212,33 @@ main {
 }
 
 /*MAIN CONTENT*/
+/*FOOTER*/
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+  padding: 30px 30px 20px 30px;
+  box-shadow: 0px -10px 10px rgba(255, 0, 0, 0.5);
+  user-select: none;
+}
+.footer-content-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 60%;
+
+  margin: 0 auto;
+}
+
+.footer-title {
+  color: red;
+  font-size: 3em;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+}
+
+/*FOOTER*/
 
 /*MEDIA*/
 @media (max-width: 2000px) {
@@ -242,7 +276,9 @@ main {
   .top-nav-container ul {
     flex-direction: column;
   }
-
+  header {
+    padding-top: 0;
+  }
   .page-title {
     top: 50px;
   }
@@ -263,8 +299,14 @@ main {
 }
 
 @media (max-width: 1160px) {
+  .header-content-wrapper {
+    max-width: 70%;
+  }
   .top-nav-container {
     display: none;
+  }
+  header {
+    padding-top: 20px;
   }
   .breaking-story-wrapper {
     display: none;
@@ -282,6 +324,9 @@ main {
   .site-wrapper {
     max-width: 80%;
   }
+  .footer-content-wrapper {
+    max-width: 80%;
+  }
   figure {
     display: none;
   }
@@ -296,6 +341,17 @@ main {
   }
   .bottom-nav-container {
     justify-content: center;
+  }
+  .footer-title {
+    font-size: 2.8rem;
+  }
+  .footer-content-wrapper {
+    max-width: 100%;
+  }
+}
+@media (max-width: 570px) {
+  .header-content-wrapper {
+    max-width: 100%;
   }
 }
 
