--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,11 @@ main {
   opacity: 0.7;
 }
 
+.site-navigator-anchor {
+  color: black;
+  text-decoration: none;
+}
+
 /*
 /*.first-story img{
     width: 500px;
