--- a/styles.css
+++ b/styles.css
@@ -170,21 +170,12 @@ main {
   text-decoration: none;
 }
 
-/*
-/*.first-story img{
-    width: 500px;
-    height: 300px;
-}
-.second-story img{
-    width: 500px;
-    height: 300px;
-}
-*/
 .main-story-content img {
   width: 400px;
 }
 
 .breaking-story-wrapper {
+  position: relative;
   padding-top: 70px;
 }
 
@@ -217,6 +208,46 @@ main {
 }
 
 /*MAIN CONTENT*/
+
+/*INDIVIDUAL STORY CONTENT*/
+.individual-site-wrapper {
+  padding-bottom: 10rem;
+}
+.individual-story {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 50%;
+  margin: 60px auto;
+  padding: 30px;
+  border: 1px solid red;
+}
+
+.individual-title {
+  font-size: 3rem;
+  text-align: left;
+  padding: 10px 0;
+}
+.sub-title-text {
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  font-style: italic;
+  margin: 20px auto;
+  padding: 20px;
+  max-width: 100%;
+
+  border-bottom: 3px solid red;
+}
+
+.article-title {
+  font-size: 2rem;
+  padding: 20px 0;
+}
+.article-text {
+  font-size: 1.3rem;
+}
+/*INDIVIDUAL STORY CONTENT*/
+
 /*FOOTER*/
 footer {
   position: absolute;
@@ -274,6 +305,9 @@ footer {
     bottom: -15px;
     left: 80%;
   }
+  .breaking-story-wrapper {
+    padding-top: 85px;
+  }
 }
 
 @media (max-width: 1580px) {
@@ -307,6 +341,9 @@ footer {
 }
 
 @media (max-width: 1160px) {
+  .site-wrapper {
+    max-width: 70%;
+  }
   .header-content-wrapper {
     max-width: 70%;
   }
